# dcase2022task6a

./: .gitignore  .gitmodules  MANIFEST.in  README.md  environment_full.yaml  install_spice.sh  pytest.ini  requirements.txt  setup.cfg
conf/: prepare.yaml  train.yaml
conf/audio_trans/: identity.yaml  resample_spectro_mean.yaml  resample_spectro_mean_spec_aug.yaml  spec_aug.yaml
conf/path/: local.yaml
conf/pl/: cnn10_transformer.yaml
conf/sweep/: dir.yaml
conf/test_mode/: best.yaml  swa.yaml
conf/text_trans/: identity.yaml  none.yaml  pickle.yaml
conf/token/: none.yaml  pickle.yaml  test.yaml  word.yaml
conf/trainer/: default.yaml  dev.yaml  lim2.yaml  lim20.yaml  lim200.yaml  profile.yaml  test.yaml  test2.yaml  test20.yaml
dcase2022task6a/: __init__.py  __main__.py  prepare.py  train.py  version.py
dcase2022task6a/callbacks/: custom_ckpt.py  evaluator.py  log.py  resume.py  stats_saver.py  time.py  utils.py
dcase2022task6a/datamodules/: clotho.py  utils.py
dcase2022task6a/datasets/: hdf.py  utils.py
dcase2022task6a/metrics/: all.py  bert_score.py  diversity.py  jaccard.py  rouge_l.py  self_bleu.py  spider.py  stats.py  tensor.py  ttr.py  urls.py  utils.py  valid.py
dcase2022task6a/nn/: urls.py
dcase2022task6a/pl_modules/: cnn10_transformer.py
dcase2022task6a/tokenization/: __init__.py  aac_tokenizer.py  constants.py  normalizers.py  tokenizers.py
dcase2022task6a/transforms/: collate.py  get.py  utils.py
dcase2022task6a/utils/: custom_logger.py  ext.py  hydra.py  misc.py  optimizers.py  schedulers.py
(+30 files in other folders)
