# -*- coding: utf-8 -*-

[metadata]
author = attr: dcase2022task6a.__author__
description="Automated Audio Captioning with Pytorch.",
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
name = dcase2022task6a
url = https://github.com/Labbeti/dcase2022task6a
version = attr: dcase2022task6a.__version__

[options]
packages=find:
package_dir=
    =.
python_requires = >= 3.9

[options.extras_require]
dev =
  pytest
  flake8
  black

[options.packages.find]
where=.
